# Kontin-Oliot

./: .gitignore  README.md
Viikko3/: CMakeLists.txt  chef.cpp  chef.h  main.cpp
Week1/viikko1/: main.cpp
viikko1/: CMakeLists.txt  main.cpp
viikko2/: CMakeLists.txt  game.cpp  game.h  main.cpp
viikko4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
viikko5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
viikko6/: CMakeLists.txt  main.cpp  student.cpp  student.h
